add swagger api/auth
